Add The Spice of Life; various changes plus missing files

--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -35,12 +35,12 @@ items {
     B:Ginto=true
     B:Imbues=true
     B:MagneticForce=true
-    B:OpSpectreKey=true
+    B:OpSpectreKey=false
     B:SoundRecorder=true
     B:SpectreArmor=true
     B:SpectreKey=true
     B:SpectreSword=true
-    B:SpiritBinder=true
+    B:SpiritBinder=false
     B:VoidStone=true
     B:Whitestone=true
 }
