--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -53,7 +53,7 @@
     B:"Allow EMP"=true
     B:"Allow Frames to move Machines (May cause corruption)"=false
     B:"Allow Gravel Gun PvP"=true
-    B:"Allow RC steel to be used in other mods"=true
+    B:"Allow RC steel to be used in other mods"=false
     B:"Allow TNT Cannon"=true
     B:"Allow special bedrock tool abilities in automation"=true
     I:"Bait Box Range"=128
@@ -77,7 +77,7 @@
     B:"Extractor Drill Wears Down"=false
     I:"Fluid Flow Speed"=5
     B:"Force Gregtech Ore Compatibility"=true
-    B:"Force Inter-Mod Ore Compatibility"=false
+    B:"Force Inter-Mod Ore Compatibility"=true
     B:"GPR Renders Ores"=true
     B:"Hard Mode EU Compatibility"=false
     B:"Hardmode Gravel Gun"=true
