--- a/config/TinkersConstruct.cfg
+++ b/config/TinkersConstruct.cfg
@@ -172,7 +172,7 @@ worldgen {
     B:"Generate Cobalt and Ardite"=true
     B:"Generate Copper"=false
     B:"Generate Copper Bushes"=false
-    B:"Generate Essence Bushes"=true
+    B:"Generate Essence Bushes"=false
     B:"Generate Gold Bushes"=false
     B:"Generate Iron Bushes"=false
     B:"Generate Surface Aluminum"=false
