--- a/config/iChunUtil.cfg
+++ b/config/iChunUtil.cfg
@@ -35,8 +35,8 @@ versioncheck {
 ##########################################################################################################
 
 versionsave {
-    I:dayCheck=5
-    S:lastCheck=
+    I:dayCheck=7
+    S:lastCheck=iChunUtil: 4.2.2
 }
 
 
