--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3696,6 +3696,234 @@ computronics {
 }
 
 
+dcsapplemilk {
+    B:defeatedcrowAppleBox=true
+    B:defeatedcrowCharcoalcontainer=true
+    B:defeatedcrowEHandle=false
+    B:defeatedcrowGunpowderContainer=false
+    B:defeatedcrowGunpowderContainer.1=false
+    B:defeatedcrowGunpowderContainer.2=false
+    B:defeatedcrowGunpowderContainer.3=false
+    B:defeatedcrowVegiBag=false
+    B:defeatedcrowVegiBag.1=false
+    B:defeatedcrowVegiBag.2=false
+    B:defeatedcrowVegiBag.3=false
+    B:defeatedcrowVegiBag.4=false
+    B:defeatedcrowVegiBag.5=false
+    B:defeatedcrowVegiBag.6=false
+    B:defeatedcrowVegiBag.7=false
+    B:defeatedcrowVegiBag.8=false
+    B:defeatedcrowVegiBag.9=false
+    B:defeatedcrowWoodBox=true
+    B:defeatedcrowWoodBox.1=true
+    B:defeatedcrowWoodBox.10=true
+    B:defeatedcrowWoodBox.11=true
+    B:defeatedcrowWoodBox.12=true
+    B:defeatedcrowWoodBox.2=true
+    B:defeatedcrowWoodBox.3=true
+    B:defeatedcrowWoodBox.4=true
+    B:defeatedcrowWoodBox.5=true
+    B:defeatedcrowWoodBox.6=true
+    B:defeatedcrowWoodBox.7=true
+    B:defeatedcrowWoodBox.8=true
+    B:defeatedcrowWoodBox.9=true
+    B:defeatedcrowadvProsessor=false
+    B:defeatedcrowalcoholCup=false
+    B:defeatedcrowalcoholCup.1=false
+    B:defeatedcrowalcoholCup.10=false
+    B:defeatedcrowalcoholCup.11=false
+    B:defeatedcrowalcoholCup.12=false
+    B:defeatedcrowalcoholCup.13=false
+    B:defeatedcrowalcoholCup.2=false
+    B:defeatedcrowalcoholCup.3=false
+    B:defeatedcrowalcoholCup.4=false
+    B:defeatedcrowalcoholCup.5=false
+    B:defeatedcrowalcoholCup.6=false
+    B:defeatedcrowalcoholCup.7=false
+    B:defeatedcrowalcoholCup.8=false
+    B:defeatedcrowalcoholCup.9=false
+    B:defeatedcrowbasket=false
+    B:defeatedcrowbasket.14=false
+    B:defeatedcrowbasket.5=false
+    B:defeatedcrowbatBox=false
+    B:defeatedcrowblockBarrel=false
+    B:defeatedcrowblockCamOil=false
+    B:defeatedcrowblockDummyAlcohol=true
+    B:defeatedcrowblockDummyAlcohol2=true
+    B:defeatedcrowblockVegiOil=false
+    B:defeatedcrowbowlBlock=false
+    B:defeatedcrowbowlBlock.1=false
+    B:defeatedcrowbowlBlock.15=false
+    B:defeatedcrowbowlBlock.2=false
+    B:defeatedcrowbowlBlock.3=false
+    B:defeatedcrowbowlBlock.4=false
+    B:defeatedcrowbowlBlock.5=false
+    B:defeatedcrowbowlBlock.6=false
+    B:defeatedcrowbowlBlock.7=false
+    B:defeatedcrowbowlBlock.8=false
+    B:defeatedcrowbowlBlock.9=false
+    B:defeatedcrowbowlJP=false
+    B:defeatedcrowbowlJP.1=false
+    B:defeatedcrowbowlJP.15=false
+    B:defeatedcrowbowlJP.2=false
+    B:defeatedcrowbowlJP.3=false
+    B:defeatedcrowbowlJP.4=false
+    B:defeatedcrowbowlJP.5=false
+    B:defeatedcrowbowlJP.6=false
+    B:defeatedcrowbowlJP.7=false
+    B:defeatedcrowbowlJP.8=false
+    B:defeatedcrowbowlJP.9=false
+    B:defeatedcrowbowlRack=false
+    B:defeatedcrowcardboardBox=false
+    B:defeatedcrowcardboardBox.1=false
+    B:defeatedcrowcardboardBox.2=false
+    B:defeatedcrowcardboardBox.3=false
+    B:defeatedcrowcassisTree.3=false
+    B:defeatedcrowcassisTree.7=false
+    B:defeatedcrowchalcedony=false
+    B:defeatedcrowchalcedony.1=false
+    B:defeatedcrowchalcedony.2=false
+    B:defeatedcrowchalcedony.3=false
+    B:defeatedcrowchalcedonyLamp=false
+    B:defeatedcrowchalcedonyLamp.1=false
+    B:defeatedcrowchalcedonyLamp.10=false
+    B:defeatedcrowchalcedonyLamp.11=false
+    B:defeatedcrowchalcedonyLamp.2=false
+    B:defeatedcrowchalcedonyLamp.3=false
+    B:defeatedcrowchalcedonyLamp.4=false
+    B:defeatedcrowchalcedonyLamp.5=false
+    B:defeatedcrowchalcedonyLamp.6=false
+    B:defeatedcrowchalcedonyLamp.7=false
+    B:defeatedcrowchalcedonyLamp.8=false
+    B:defeatedcrowchalcedonyLamp.9=false
+    B:defeatedcrowchalcedonyPanel=false
+    B:defeatedcrowchocolateGift=false
+    B:defeatedcrowchocolateGift.1=false
+    B:defeatedcrowchopsticksBox=false
+    B:defeatedcrowchopsticksBox.4=false
+    B:defeatedcrowclamSand=false
+    B:defeatedcrowcocktail=false
+    B:defeatedcrowcocktail.1=false
+    B:defeatedcrowcocktail.10=false
+    B:defeatedcrowcocktail.11=false
+    B:defeatedcrowcocktail.12=false
+    B:defeatedcrowcocktail.13=false
+    B:defeatedcrowcocktail.14=false
+    B:defeatedcrowcocktail.15=false
+    B:defeatedcrowcocktail.2=false
+    B:defeatedcrowcocktail.3=false
+    B:defeatedcrowcocktail.4=false
+    B:defeatedcrowcocktail.5=false
+    B:defeatedcrowcocktail.6=false
+    B:defeatedcrowcocktail.7=false
+    B:defeatedcrowcocktail.8=false
+    B:defeatedcrowcocktail.9=false
+    B:defeatedcrowcocktail2=false
+    B:defeatedcrowcocktail2.1=false
+    B:defeatedcrowcocktail2.2=false
+    B:defeatedcrowcocktail2.3=false
+    B:defeatedcrowcocktail2.4=false
+    B:defeatedcrowcocktail2.5=false
+    B:defeatedcrowcocktail2.6=false
+    B:defeatedcrowcocktail2.7=false
+    B:defeatedcrowcocktail2.8=false
+    B:defeatedcrowcocktail2.9=false
+    B:defeatedcrowcocktailSP=false
+    B:defeatedcrowcocktailSP.1=false
+    B:defeatedcrowcocktailSP.2=false
+    B:defeatedcrowcropMint=false
+    B:defeatedcroweggBasket=false
+    B:defeatedcroweggBasket.1=false
+    B:defeatedcrowemptyBottle=false
+    B:defeatedcrowemptyCup=false
+    B:defeatedcrowemptyPanG=false
+    B:defeatedcrowevaporator=false
+    B:defeatedcrowfilledCup=false
+    B:defeatedcrowfilledCup.1=false
+    B:defeatedcrowfilledCup.10=false
+    B:defeatedcrowfilledCup.11=false
+    B:defeatedcrowfilledCup.12=false
+    B:defeatedcrowfilledCup.13=false
+    B:defeatedcrowfilledCup.2=false
+    B:defeatedcrowfilledCup.3=false
+    B:defeatedcrowfilledCup.4=false
+    B:defeatedcrowfilledCup.5=false
+    B:defeatedcrowfilledCup.6=false
+    B:defeatedcrowfilledCup.7=false
+    B:defeatedcrowfilledCup.8=false
+    B:defeatedcrowfilledCup.9=false
+    B:defeatedcrowfilledCup2=false
+    B:defeatedcrowfilledCup2.1=false
+    B:defeatedcrowfilledCup2.10=false
+    B:defeatedcrowfilledCup2.11=false
+    B:defeatedcrowfilledCup2.12=false
+    B:defeatedcrowfilledCup2.2=false
+    B:defeatedcrowfilledCup2.3=false
+    B:defeatedcrowfilledCup2.4=false
+    B:defeatedcrowfilledCup2.5=false
+    B:defeatedcrowfilledCup2.6=false
+    B:defeatedcrowfilledCup2.7=false
+    B:defeatedcrowfilledCup2.8=false
+    B:defeatedcrowfilledCup2.9=false
+    B:defeatedcrowflintBlock=false
+    B:defeatedcrowflowerPot=false
+    B:defeatedcrowflowerPot.4=false
+    B:defeatedcrowfoodPlate=false
+    B:defeatedcrowfoodPlate.1=false
+    B:defeatedcrowfoodPlate.2=false
+    B:defeatedcrowfoodPlate.3=false
+    B:defeatedcrowgelBatContainer=false
+    B:defeatedcrowiceCreamBlock=false
+    B:defeatedcrowiceCreamBlock.1=false
+    B:defeatedcrowiceCreamBlock.10=false
+    B:defeatedcrowiceCreamBlock.11=false
+    B:defeatedcrowiceCreamBlock.12=false
+    B:defeatedcrowiceCreamBlock.13=false
+    B:defeatedcrowiceCreamBlock.2=false
+    B:defeatedcrowiceCreamBlock.3=false
+    B:defeatedcrowiceCreamBlock.4=false
+    B:defeatedcrowiceCreamBlock.5=false
+    B:defeatedcrowiceCreamBlock.6=false
+    B:defeatedcrowiceCreamBlock.7=false
+    B:defeatedcrowiceCreamBlock.8=false
+    B:defeatedcrowiceCreamBlock.9=false
+    B:defeatedcrowiceMaker=false
+    B:defeatedcrowincenseBase=false
+    B:defeatedcrowlargeBottle=false
+    B:defeatedcrowleavesYuzu.3=false
+    B:defeatedcrowlightGel=false
+    B:defeatedcrowlogYuzu=true
+    B:defeatedcrowmelonBomb=false
+    B:defeatedcrowmelonSilky=false
+    B:defeatedcrowmobDropBox=true
+    B:defeatedcrowmobDropBox.1=true
+    B:defeatedcrowmobDropBox.2=true
+    B:defeatedcrowmobDropBox.3=true
+    B:defeatedcrowmobDropBox.4=true
+    B:defeatedcrowmushroomBox=false
+    B:defeatedcrowmushroomBox.1=false
+    B:defeatedcrowprosessor=false
+    B:defeatedcrowredGel=false
+    B:defeatedcrowrotaryDial=false
+    B:defeatedcrowsaplingTea=false
+    B:defeatedcrowsaplingTea.1=false
+    B:defeatedcrowsaplingTea.2=false
+    B:defeatedcrowsaplingYuzu=false
+    B:defeatedcrowsoupPan3=false
+    B:defeatedcrowteaMakerBlack=false
+    B:defeatedcrowteaMakerNext=false
+    B:defeatedcrowteaTree=false
+    B:defeatedcrowteaTree.1=false
+    B:defeatedcrowteppanII=false
+    B:defeatedcrowteppann=false
+    B:defeatedcrowwipeBox=false
+    B:defeatedcrowwipeBox.1=false
+    B:defeatedcrowwipeBox2=false
+    B:defeatedcrowyuzuBatContainer=false
+    B:defeatedcrowyuzuFence=false
+}
+
+
 denseores {
     B:block0=true
     B:block0.1=true
@@ -4904,16 +5132,24 @@ gardentrees {
     B:thinlog.1128=false
     B:thinlog.1133=false
     B:thinlog.1135=false
+    B:thinlog.1185=false
+    B:thinlog.1201=false
     B:thinlog.1228=false
     B:thinlog.1232=false
     B:thinlog.1244=false
+    B:thinlog.12457=false
     B:thinlog.1248=false
+    B:thinlog.12499=false
     B:thinlog.12699=false
     B:thinlog.12701=false
     B:thinlog.12715=false
     B:thinlog.12716=false
     B:thinlog.12741=false
     B:thinlog.12743=false
+    B:thinlog.12766=false
+    B:thinlog.12767=false
+    B:thinlog.12768=false
+    B:thinlog.12769=false
     B:thinlog.12849=false
     B:thinlog.12850=false
     B:thinlog.12851=false
@@ -4942,11 +5178,18 @@ gardentrees {
     B:thinlog.13416=false
     B:thinlog.13421=false
     B:thinlog.13423=false
+    B:thinlog.13473=false
+    B:thinlog.13489=false
     B:thinlog.13516=false
     B:thinlog.13520=false
     B:thinlog.13532=false
     B:thinlog.13536=false
+    B:thinlog.169=false
+    B:thinlog.176=false
+    B:thinlog.182=false
+    B:thinlog.193=false
     B:thinlog.2=false
+    B:thinlog.211=false
     B:thinlog.3=false
     B:thinlog.4=false
     B:thinlog.411=false
@@ -4955,9 +5198,13 @@ gardentrees {
     B:thinlog.414=false
     B:thinlog.424=false
     B:thinlog.426=false
+    B:thinlog.4265=false
     B:thinlog.427=false
+    B:thinlog.4272=false
     B:thinlog.428=false
+    B:thinlog.4289=false
     B:thinlog.429=false
+    B:thinlog.4307=false
     B:thinlog.435=false
     B:thinlog.437=false
     B:thinlog.4507=false
@@ -4972,6 +5219,10 @@ gardentrees {
     B:thinlog.4549=false
     B:thinlog.455=false
     B:thinlog.4551=false
+    B:thinlog.4574=false
+    B:thinlog.4575=false
+    B:thinlog.4576=false
+    B:thinlog.4577=false
     B:thinlog.4657=false
     B:thinlog.4658=false
     B:thinlog.4659=false
@@ -4982,12 +5233,17 @@ gardentrees {
     B:thinlog.4664=false
     B:thinlog.4681=false
     B:thinlog.4682=false
+    B:thinlog.4685=false
     B:thinlog.4691=false
     B:thinlog.4692=false
     B:thinlog.4699=false
     B:thinlog.4709=false
     B:thinlog.4717=false
     B:thinlog.4727=false
+    B:thinlog.478=false
+    B:thinlog.479=false
+    B:thinlog.480=false
+    B:thinlog.481=false
     B:thinlog.4857=false
     B:thinlog.4863=false
     B:thinlog.4865=false
@@ -5012,6 +5268,8 @@ gardentrees {
     B:thinlog.5224=false
     B:thinlog.5229=false
     B:thinlog.5231=false
+    B:thinlog.5281=false
+    B:thinlog.5297=false
     B:thinlog.5324=false
     B:thinlog.5328=false
     B:thinlog.5340=false
@@ -5026,12 +5284,14 @@ gardentrees {
     B:thinlog.568=false
     B:thinlog.585=false
     B:thinlog.586=false
+    B:thinlog.589=false
     B:thinlog.592=false
     B:thinlog.595=false
     B:thinlog.596=false
     B:thinlog.602=false
     B:thinlog.603=false
     B:thinlog.613=false
+    B:thinlog.61630=false
     B:thinlog.61872=false
     B:thinlog.61874=false
     B:thinlog.62040=false
@@ -5045,12 +5305,18 @@ gardentrees {
     B:thinlog.785=false
     B:thinlog.787=false
     B:thinlog.789=false
+    B:thinlog.8361=false
+    B:thinlog.8403=false
     B:thinlog.8603=false
     B:thinlog.8605=false
     B:thinlog.8619=false
     B:thinlog.8620=false
     B:thinlog.8645=false
     B:thinlog.8647=false
+    B:thinlog.8670=false
+    B:thinlog.8671=false
+    B:thinlog.8672=false
+    B:thinlog.8673=false
     B:thinlog.8753=false
     B:thinlog.8754=false
     B:thinlog.8755=false
@@ -5079,6 +5345,8 @@ gardentrees {
     B:thinlog.9320=false
     B:thinlog.9325=false
     B:thinlog.9327=false
+    B:thinlog.9377=false
+    B:thinlog.9393=false
     B:thinlog.9420=false
     B:thinlog.9424=false
     B:thinlog.9436=false
@@ -5101,16 +5369,24 @@ gardentrees {
     B:thinlogfence.1128=false
     B:thinlogfence.1133=false
     B:thinlogfence.1135=false
+    B:thinlogfence.1185=false
+    B:thinlogfence.1201=false
     B:thinlogfence.1228=false
     B:thinlogfence.1232=false
     B:thinlogfence.1244=false
+    B:thinlogfence.12457=false
     B:thinlogfence.1248=false
+    B:thinlogfence.12499=false
     B:thinlogfence.12699=false
     B:thinlogfence.12701=false
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
     B:thinlogfence.12741=false
     B:thinlogfence.12743=false
+    B:thinlogfence.12766=false
+    B:thinlogfence.12767=false
+    B:thinlogfence.12768=false
+    B:thinlogfence.12769=false
     B:thinlogfence.12849=false
     B:thinlogfence.12850=false
     B:thinlogfence.12851=false
@@ -5139,11 +5415,18 @@ gardentrees {
     B:thinlogfence.13416=false
     B:thinlogfence.13421=false
     B:thinlogfence.13423=false
+    B:thinlogfence.13473=false
+    B:thinlogfence.13489=false
     B:thinlogfence.13516=false
     B:thinlogfence.13520=false
     B:thinlogfence.13532=false
     B:thinlogfence.13536=false
+    B:thinlogfence.169=false
+    B:thinlogfence.176=false
+    B:thinlogfence.182=false
+    B:thinlogfence.193=false
     B:thinlogfence.2=false
+    B:thinlogfence.211=false
     B:thinlogfence.3=false
     B:thinlogfence.4=false
     B:thinlogfence.411=false
@@ -5152,9 +5435,13 @@ gardentrees {
     B:thinlogfence.414=false
     B:thinlogfence.424=false
     B:thinlogfence.426=false
+    B:thinlogfence.4265=false
     B:thinlogfence.427=false
+    B:thinlogfence.4272=false
     B:thinlogfence.428=false
+    B:thinlogfence.4289=false
     B:thinlogfence.429=false
+    B:thinlogfence.4307=false
     B:thinlogfence.435=false
     B:thinlogfence.437=false
     B:thinlogfence.4507=false
@@ -5169,6 +5456,10 @@ gardentrees {
     B:thinlogfence.4549=false
     B:thinlogfence.455=false
     B:thinlogfence.4551=false
+    B:thinlogfence.4574=false
+    B:thinlogfence.4575=false
+    B:thinlogfence.4576=false
+    B:thinlogfence.4577=false
     B:thinlogfence.4657=false
     B:thinlogfence.4658=false
     B:thinlogfence.4659=false
@@ -5179,12 +5470,17 @@ gardentrees {
     B:thinlogfence.4664=false
     B:thinlogfence.4681=false
     B:thinlogfence.4682=false
+    B:thinlogfence.4685=false
     B:thinlogfence.4691=false
     B:thinlogfence.4692=false
     B:thinlogfence.4699=false
     B:thinlogfence.4709=false
     B:thinlogfence.4717=false
     B:thinlogfence.4727=false
+    B:thinlogfence.478=false
+    B:thinlogfence.479=false
+    B:thinlogfence.480=false
+    B:thinlogfence.481=false
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
     B:thinlogfence.4865=false
@@ -5209,6 +5505,8 @@ gardentrees {
     B:thinlogfence.5224=false
     B:thinlogfence.5229=false
     B:thinlogfence.5231=false
+    B:thinlogfence.5281=false
+    B:thinlogfence.5297=false
     B:thinlogfence.5324=false
     B:thinlogfence.5328=false
     B:thinlogfence.5340=false
@@ -5223,12 +5521,14 @@ gardentrees {
     B:thinlogfence.568=false
     B:thinlogfence.585=false
     B:thinlogfence.586=false
+    B:thinlogfence.589=false
     B:thinlogfence.592=false
     B:thinlogfence.595=false
     B:thinlogfence.596=false
     B:thinlogfence.602=false
     B:thinlogfence.603=false
     B:thinlogfence.613=false
+    B:thinlogfence.61630=false
     B:thinlogfence.61872=false
     B:thinlogfence.61874=false
     B:thinlogfence.62040=false
@@ -5242,12 +5542,18 @@ gardentrees {
     B:thinlogfence.785=false
     B:thinlogfence.787=false
     B:thinlogfence.789=false
+    B:thinlogfence.8361=false
+    B:thinlogfence.8403=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
     B:thinlogfence.8619=false
     B:thinlogfence.8620=false
     B:thinlogfence.8645=false
     B:thinlogfence.8647=false
+    B:thinlogfence.8670=false
+    B:thinlogfence.8671=false
+    B:thinlogfence.8672=false
+    B:thinlogfence.8673=false
     B:thinlogfence.8753=false
     B:thinlogfence.8754=false
     B:thinlogfence.8755=false
@@ -5276,6 +5582,8 @@ gardentrees {
     B:thinlogfence.9320=false
     B:thinlogfence.9325=false
     B:thinlogfence.9327=false
+    B:thinlogfence.9377=false
+    B:thinlogfence.9393=false
     B:thinlogfence.9420=false
     B:thinlogfence.9424=false
     B:thinlogfence.9436=false
