--- a/config/iChunUtil_Stats.cfg
+++ b/config/iChunUtil_Stats.cfg
@@ -11,7 +11,7 @@ stats {
     S:statsData=
 
     # Don't change this.
-    S:statsIdentifier=,>@S#j4Eyk{A6n*6'+Ch
+    S:statsIdentifier=9,[fM6M"@/a%v{8;FL`<
 
     # Opt out of iChunUtil's stat collection
     # No personal info is taken from you.
