More quests and image to the quest book.

--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Apr 8, 2015 10:17:38 AM
+; created Apr 8, 2015 12:32:31 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
