Updating Reika's mods again, denseores, and cofhlib

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3621,6 +3621,7 @@ chromaticraft {
     B:chromaticraftblockcrystal=false
     B:chromaticraftblockdecay=false
     B:chromaticraftblockdecoplant=false
+    B:chromaticraftblockdimgen=false
     B:chromaticraftblockdye=true
     B:chromaticraftblockdyegrass=false
     B:chromaticraftblockdyeleaf=false
@@ -3678,6 +3679,7 @@ chromaticraft {
     B:chromaticraftblocktilemodelled2=false
     B:chromaticraftblocktileplant=false
     B:chromaticraftblocktnt=false
+    B:chromaticraftblockvoidrift=false
 }
 
 
