--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -3,6 +3,7 @@
 "biome ids" {
     I:"Ender Forest Biome ID"=47
     I:"Island Biome ID"=101
+    I:"Plains Biome ID"=122
     I:"Rainbow Forest Biome ID"=48
     I:"Skyland Biome ID"=100
 }
@@ -11,8 +12,10 @@
 "control setup" {
     B:"Allow Danger in Rainbow Forests"=false
     B:"Allow duplication wand to copy TileEntities"=false
+    B:"Always Respawn EnderDragon"=false
     I:"Chest Generation Tier"=4
     B:"Crystal Plants May Drop Shards"=true
+    B:"Delete End on Unload"=false
     B:"Disable Pendant Particles"=true
     B:"Dye Block Particles"=true
     B:"Enable Biome Painter"=true
