--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -951,6 +951,12 @@ ChromatiCraft {
         D:OccuranceMultiplier=1.0
     }
 
+    "Crystal Plains" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
 }
 
 
