--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -1,6 +1,37 @@
 # Configuration file
 
 "tree populations for biomes" {
+    S:"Reika.Crystal Plains Big Birch 0"=
+    S:"Reika.Crystal Plains Big Birch 1"=
+    S:"Reika.Crystal Plains Big Pine 0"=
+    S:"Reika.Crystal Plains Big Pine 1"=
+    S:"Reika.Crystal Plains Block Maple"=
+    S:"Reika.Crystal Plains Block Oak 0"=
+    S:"Reika.Crystal Plains Block Oak Autumn"=
+    S:"Reika.Crystal Plains Block Oak Brown"=
+    S:"Reika.Crystal Plains Block Oak Dark"=
+    S:"Reika.Crystal Plains Cyprus Oak 0"=
+    S:"Reika.Crystal Plains Cyprus Willow"=
+    S:"Reika.Crystal Plains Dark Hat"=
+    S:"Reika.Crystal Plains Dead Tree 0"=
+    S:"Reika.Crystal Plains Great Oak 0"=
+    S:"Reika.Crystal Plains Great Oak Autumn"=
+    S:"Reika.Crystal Plains Great Oak Brown"=
+    S:"Reika.Crystal Plains Great Oak Dark"=
+    S:"Reika.Crystal Plains Hat Sacred Tree"=
+    S:"Reika.Crystal Plains Hat Tree 0"=
+    S:"Reika.Crystal Plains Pertrified Dead Tree"=
+    S:"Reika.Crystal Plains Swamp Oak 0"=
+    S:"Reika.Crystal Plains Tall Cherry"=
+    S:"Reika.Crystal Plains Tall Dark Oak"=
+    S:"Reika.Crystal Plains Tall Fir"=
+    S:"Reika.Crystal Plains Tall Jacaranda"=
+    S:"Reika.Crystal Plains Tall Magic Tree"=
+    S:"Reika.Crystal Plains Tall Maple"=
+    S:"Reika.Crystal Plains Tall Oak 0"=
+    S:"Reika.Crystal Plains Tall Oak Autumn"=
+    S:"Reika.Crystal Plains Tall Oak Brown"=
+    S:"Reika.Crystal Plains Yellow Big Birch"=
     S:"Reika.Ender Forest Big Birch 0"=
     S:"Reika.Ender Forest Big Birch 1"=
     S:"Reika.Ender Forest Big Pine 0"=
