--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Apr 11, 2015 9:51:56 PM
+; created Apr 12, 2015 10:33:55 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
