--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4892,6 +4892,7 @@ galacticraftcore {
     B:tilecargo.4=false
     B:tilecheeseBlock=false
     B:tilecrudeOilStill=false
+    B:tiledish=false
     B:tiledistributor=false
     B:tiledummyblock=false
     B:tileenclosed.1=false
