Applying diamond to bronze now gives it steel level

--- a/config/IguanaTinkerTweaks/main.cfg
+++ b/config/IguanaTinkerTweaks/main.cfg
@@ -107,7 +107,7 @@ debug {
 
 harvestleveltweaks {
     # Changes the Diamond and Emerald modifier: Apply it to a bronze level tool to obtain diamond level. Required unless you have steel or similar. [default: true]
-    B:diamondRequired=false
+    B:diamondRequired=true
 
     # Change durability of all tool materials (in percent) [range: 1 ~ 999, default: 80]
     I:durabilityPercentage=80
