config and script updates

--- a/config/ExtraUtilities.cfg
+++ b/config/ExtraUtilities.cfg
@@ -20,9 +20,9 @@ blocks {
     B:EnderThermicPumpEnabled=true
     B:EtherealBlockEnabled=true
     B:FilingCabinetEnabled=true
-    B:Generator64Enabled=true
-    B:Generator8Enabled=true
-    B:GeneratorEnabled=true
+    B:Generator64Enabled=false
+    B:Generator8Enabled=false
+    B:GeneratorEnabled=false
     B:GreenScreenEnabled=true
     B:MagnumTorchEnabled=false
     B:PeacefultableEnabled=true
