--- a/config/forestry/modules.cfg
+++ b/config/forestry/modules.cfg
@@ -27,7 +27,7 @@ modules {
     B:buildcraft.transport=true
 
     # Adds several RF engines.
-    B:energy=true
+    B:energy=false
 
     # Compatibility plugin for Equivalent Exchange 2. Enables the Omega branch of bees. Requires Apiculture to be enabled.
     B:equivelent.exchange=true
