--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Apr 12, 2015 10:33:55 AM
+; created Apr 12, 2015 11:25:07 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
