--- a/config/forestry/common.conf
+++ b/config/forestry/common.conf
@@ -13,9 +13,9 @@
 # CRAFTING
 #####################
 # set to false to disable crafting recipe for bronze
-crafting.bronze.enabled=true
+crafting.bronze.enabled=false
 # set to false to disable crafting recipes for all types of stamps.
-crafting.stamps.enabled=true
+crafting.stamps.enabled=false
 # if crafting of stamps is generally allowed, these stamps are still excluded from crafting.
 crafting.stamps.collector=20n;50n;100n;200n
 
