Reverted Extra Utilities, update ThaumicEnergistics

--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -99,13 +99,16 @@ dropblock {
     # Does the elevator drain player XP when used?
     B:elevatorDrainsXP=true
 
+    # Disable limit of blocks between elevators (equivalent to maxPassThrough = infinity)
+    B:ignoreAllBlocks=false
+
     # The elevator will ignore half blocks when counting the blocks it can pass through
     B:ignoreHalfBlocks=false
 
     # The elevator will try to pass through blocks that have custom collision boxes
     B:irregularBlocksArePassable=true
 
-    # The maximum amount of blocks the elevator can pass through before the teleport fails. -1 disables this
+    # The maximum amount of blocks the elevator can pass through before the teleport fails
     I:maxPassThrough=4
 
     # The range of the drop block
@@ -147,6 +150,9 @@ features {
 
     # Id of liquid XP fluid (WARNING: only for users who know what they are doing - changing this id can break worlds
     S:xpFluidId=xpjuice
+
+    # Storage in mB needed to store single XP point
+    I:xpToLiquidRatio=20
 }
 
 
