--- a/config/computronics.cfg
+++ b/config/computronics.cfg
@@ -10,7 +10,7 @@ chatbox {
     # Enable Creative Chat Boxes. [default: true]
     B:enableCreative=true
 
-    # The maximum chat box distance, in blocks. [range: 4 ~ 2147483647, default: 40]
+    # The maximum chat box distance, in blocks. [range: 4 ~ 32767, default: 40]
     I:maxDistance=40
 
     # The Chat Box's default prefix. [default: ChatBox]
