--- a/config/forestry/modules.cfg
+++ b/config/forestry/modules.cfg
@@ -14,6 +14,9 @@ modules {
     # Adds additional tree species and products.
     B:arboriculture=true
 
+    # Compatibility plugin for Biomes O Plenty. Enables farming BoP saplings.
+    B:biomesoplenty=true
+
     # Compatibility plugin for BuildCraft 6.
     B:buildcraft.fuels=true
 
@@ -26,11 +29,17 @@ modules {
     # Compatibility plugin for BuildCraft 6.
     B:buildcraft.transport=true
 
+    # Compatibility plugin for Chisel. Adds worldgen blocks to Backpacks.
+    B:chisel=true
+
     # Adds several RF engines.
     B:energy=false
 
     # Compatibility plugin for Equivalent Exchange 2. Enables the Omega branch of bees. Requires Apiculture to be enabled.
     B:equivelent.exchange=true
+
+    # Compatibility plugin for Extra Utilities. Enables farming ender lilies.
+    B:extrautilities=true
 
     # Adds a wide variety of machines to craft, produce and process products.
     B:factory=true
@@ -44,17 +53,26 @@ modules {
     # Adds food.
     B:food=true
 
+    # Compatibility plugin for HarvestCraft. Enables farming HarvestCraft plants and trees.
+    B:harvestcraft=true
+
     # Compatibility plugin for IC2. Adds electrical engine and generator for power conversion.
     B:industrialcraft=true
 
     # Butterflies. Shiny.
     B:lepidopterology=true
 
+    # Compatibility plugin for Magical Crops.
+    B:magicalcrops=true
+
     # Adds Forestry's mail and trade system.
     B:mail=true
 
     # Compatibility plugin for Natura. Enables farming Natura saplings.
     B:natura=true
+
+    # Compatibility plugin for Plant Mega Pack.
+    B:plantmegapack=true
 
     # Adds the apiarist's pipe for beekeeping if apiculture is enabled and BuildCraft 6 is present.
     B:propolis.pipe=true
