--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2001,6 +2001,7 @@ botania {
     B:endStoneBrick0SlabFull=true
     B:endStoneBrick0Stairs=false
     B:enderEyeBlock=false
+    B:fakeAir=false
     B:flower=false
     B:flower.1=false
     B:flower.10=false
@@ -2149,12 +2150,15 @@ botania {
     B:quartzSlabManaHalf=false
     B:quartzSlabRedFull=true
     B:quartzSlabRedHalf=false
+    B:quartzSlabSunnyFull=true
+    B:quartzSlabSunnyHalf=false
     B:quartzStairsBlaze=false
     B:quartzStairsDark=false
     B:quartzStairsElf=false
     B:quartzStairsLavender=false
     B:quartzStairsMana=false
     B:quartzStairsRed=false
+    B:quartzStairsSunny=false
     B:quartzTypeBlaze=true
     B:quartzTypeBlaze.1=true
     B:quartzTypeBlaze.2=true
@@ -2173,6 +2177,9 @@ botania {
     B:quartzTypeRed=true
     B:quartzTypeRed.1=true
     B:quartzTypeRed.2=true
+    B:quartzTypeSunny=true
+    B:quartzTypeSunny.1=true
+    B:quartzTypeSunny.2=true
     B:redStringComparator=false
     B:redStringContainer=false
     B:redStringDispenser=false
@@ -2208,6 +2215,46 @@ botania {
     B:spreader.2=false
     B:spreader.3=false
     B:starfield=false
+    B:stone=true
+    B:stone.1=true
+    B:stone.10=true
+    B:stone.11=true
+    B:stone.12=true
+    B:stone.13=true
+    B:stone.14=true
+    B:stone.15=true
+    B:stone.2=true
+    B:stone.3=true
+    B:stone.4=true
+    B:stone.5=true
+    B:stone.6=true
+    B:stone.7=true
+    B:stone.8=true
+    B:stone.9=true
+    B:stone0Slab=false
+    B:stone0SlabFull=true
+    B:stone0Stairs=false
+    B:stone10Slab=false
+    B:stone10SlabFull=true
+    B:stone10Stairs=false
+    B:stone11Slab=false
+    B:stone11SlabFull=true
+    B:stone11Stairs=false
+    B:stone1Slab=false
+    B:stone1SlabFull=true
+    B:stone1Stairs=false
+    B:stone2Slab=false
+    B:stone2SlabFull=true
+    B:stone2Stairs=false
+    B:stone3Slab=false
+    B:stone3SlabFull=true
+    B:stone3Stairs=false
+    B:stone8Slab=false
+    B:stone8SlabFull=true
+    B:stone8Stairs=false
+    B:stone9Slab=false
+    B:stone9SlabFull=true
+    B:stone9Stairs=false
     B:storage=true
     B:storage.1=true
     B:storage.2=true
@@ -2411,12 +2458,16 @@ chisel {
     B:antiBlock.9=true
     B:arcane=true
     B:arcane.1=true
+    B:arcane.10=true
+    B:arcane.11=true
     B:arcane.2=true
     B:arcane.3=true
     B:arcane.4=true
     B:arcane.5=true
     B:arcane.6=true
     B:arcane.7=true
+    B:arcane.8=true
+    B:arcane.9=true
     B:autoChisel=false
     B:birchplanks.1=true
     B:birchplanks.10=true
@@ -2595,6 +2646,10 @@ chisel {
     B:factoryblock.7=true
     B:factoryblock.8=true
     B:factoryblock.9=true
+    B:factoryblock2=true
+    B:factoryblock2.1=true
+    B:factoryblock2.2=true
+    B:factoryblock2.3=true
     B:fantasyblock=true
     B:fantasyblock.1=true
     B:fantasyblock.10=true
@@ -2646,6 +2701,7 @@ chisel {
     B:glass.7=true
     B:glass.8=true
     B:glass.9=true
+    B:glass2=true
     B:glasspane.1=false
     B:glasspane.12=false
     B:glasspane.13=false
@@ -3575,6 +3631,21 @@ chisel {
     B:voidstone2.7=true
     B:voidstonePillar=true
     B:voidstonePillar2=true
+    B:voidstoneRunic.1=true
+    B:voidstoneRunic.10=true
+    B:voidstoneRunic.11=true
+    B:voidstoneRunic.12=true
+    B:voidstoneRunic.13=true
+    B:voidstoneRunic.14=true
+    B:voidstoneRunic.15=true
+    B:voidstoneRunic.2=true
+    B:voidstoneRunic.3=true
+    B:voidstoneRunic.4=true
+    B:voidstoneRunic.5=true
+    B:voidstoneRunic.6=true
+    B:voidstoneRunic.7=true
+    B:voidstoneRunic.8=true
+    B:voidstoneRunic.9=true
     B:warningSign=true
     B:warningSign.1=true
     B:warningSign.10=true
@@ -4214,6 +4285,8 @@ extracells {
     B:certustank=false
     B:ecbaseblock=false
     B:fluidcrafter=false
+    B:hardmedrive=false
+    B:vibrantchamberfluid=false
     B:walrus=false
 }
 
@@ -5107,7 +5180,15 @@ gardenstuff {
     B:lightchain.4=false
     B:lightchain.5=false
     B:metalblock=true
+    B:mossbrick=true
+    B:mossbrick.1=true
+    B:mossbrick.2=true
+    B:mossbrick.3=true
+    B:mossbrick.4=true
+    B:mossbrick.5=true
+    B:mossbrick.6=true
     B:rootcover=false
+    B:stoneblock=true
 }
 
 
