--- a/config/StorageDrawers.cfg
+++ b/config/StorageDrawers.cfg
@@ -65,6 +65,7 @@ general {
 
 integration {
     B:enableAE2=true
+    B:enableMineTweaker=true
     B:enableThaumcraft=true
     B:enableWaila=true
 }
