--- a/config/biomesoplenty/biomeweights.cfg
+++ b/config/biomesoplenty/biomeweights.cfg
@@ -31,6 +31,7 @@
     I:"Dead Forest"=7
     I:"Dead Swamp"=7
     I:"Deciduous Forest"=10
+    I:"Dense Forest"=7
     I:"Eucalyptus Forest"=7
     I:Fen=10
     I:"Flower Field"=3
@@ -73,6 +74,7 @@
     I:Wasteland=3
     I:Wetland=7
     I:Woodland=10
+    I:"Xeric Shrubland"=5
 }
 
 
